--- a/proiect/home/index.css
+++ b/proiect/home/index.css
@@ -70,6 +70,7 @@ html{
     align-items: center;
     background-color:#FFD700;
     height: 100%;
+    overflow: hidden;
 }
 .meniu-links ul li {
     list-style: none;
@@ -94,6 +95,37 @@ html{
 .meniu-links ul li:hover::after, .footer-links  ul li:hover::after{
     width: 100%;
 }
+.meniu-links > .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+.meniu-links  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:#FFD700;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+.meniu-links  .dropdown .fa{
+    font-size:15px;
+}
+.meniu-links  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .meniu-links  .dropdown-content a:hover {
+    background-color: #3A98B9;
+  }
+
+  .meniu-links  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
 .row{
     display: flex;
     margin-top: 5%;
@@ -241,6 +273,45 @@ html{
     position: relative;
     display: flex;
 }
+.star-rating {
+    display: flex;
+    align-items: center;
+    width: 160px;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    position: relative;
+    margin-top:6px;
+    margin-left:20px;
+  }
+.star-rating input {
+    display: none;
+ }
+ .star-rating > label {
+    width: 30px;
+    height: 30px;
+    font-family: Arial;
+    font-size: 30px;
+    transition: 0.2s ease;
+    color: orange;
+  }
+  .star-rating label::before {
+    content: '\2606';
+    position: absolute;
+    top: 0px;
+    line-height: 26px;
+  }
+  .star-rating label:hover {
+    content: "\2605";
+    color: #f5c518;
+  }
+  .star-rating label:active::before {
+    transform:scale(1.1);
+  }
+
+  .star-rating input:checked ~ label:before {
+    content:'\2605';
+  }
+
 .icons .fa, .fa-brands{
     color:black;
     margin:0 13px;
@@ -253,7 +324,7 @@ html{
     cursor:pointer;
     padding: 18px 10px;
 }
-  /* Next & previous buttons */
+ 
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -269,17 +340,17 @@ html{
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
+ 
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
   
-  /* On hover, add a black background color with a little bit see-through */
+  
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
-  /* The dots/bullets/indicators */
+  
   .dot {
     cursor: pointer;
     height: 15px;
@@ -295,7 +366,7 @@ html{
     background-color: #717171;
   }
   
-  /* Fading animation */
+ 
   .fade {
     animation-name: fade;
     animation-duration: 1.5s;
@@ -305,63 +376,67 @@ html{
     from {opacity: .4}
     to {opacity: 1}
   }
-.stars {
-    font-size: 15px;
+/*                                               Css pentru Intrebari frecvente                      */
+.faq-heading{
+    text-align: center;
+    color:black;
+    margin-top:2%;
+    margin-bottom: 2%;
+}
+.faq-container{
+display: flex;
+justify-content: center;
+flex-direction: column;
+}
+.hr-line{
+  width: 60%;
+  margin: auto;
+}
+
+.faq-question {
+    color:#0078AA;
     cursor: pointer;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-end;
-    padding-left: 20px;
-    padding-top: 12px;
-}
-.fa-regular i{
-    display: inline-block;
-}
-.fa-regular:hover::before{
-    content: "\2605";
-    color: #f5c518;
-}
-
-/*Css pentru Intrebari frecvente */
-
-#question-title{
-    display: flex;
-    justify-content: center;
-    font-size:30px;
-    padding-top:2%;
-    padding-bottom: 2%;
-    border-bottom: solid;
-}
-.questions-list{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap:10%;
-    padding-top:3%;
-    padding-left:3%;
-    padding-right: 3%;
-}
-.questions-list > div {
-    background-color: #0078AA;
-   /* background-color: rgba(235, 235, 235, 0.8);*/
-    display: flex;
-    text-align: start;
+    padding: 30px 20px;
+    width: 60%;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    margin: auto;
     font-size: 20px;
-    align-content: flex-start;
-    justify-content: space-between;
-    align-items: center;
-    align-self: center;
-    padding-left:3%;
-    padding-right:3%;
-    height: 50px;
-  }
-.fa-plus
-{
-    border:none;
-    background-color: #0078AA;
-    font-size:15px;
+
+}
+.faq-answer{
+    margin: auto;
+   width: 50%; 
+   padding: auto;
 }
 
-/*Pentru pagina de contact */
+.faq-active,
+.faq-question:hover {
+    background-color: #F6F6F6;
+}
+
+.faq-answer {
+    padding: 0 18px;
+    background-color: #F6F6F6;
+    display: none;
+    overflow: hidden;
+}
+.faq-question:after {
+    content: '\02795';
+    /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+.faq-active:after {
+    content: "\2796";
+    /* Unicode character for "minus" sign (-) */
+}
+
+/*                                           Pentru pagina de contact                    */
 
 .contact{
     display: grid;
@@ -408,7 +483,7 @@ html{
     padding-top: 3%;
 }
 
-/* Top Scoli Auto */
+/*                                                   Top Scoli Auto                                          */
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
@@ -438,6 +513,26 @@ table {
     text-align: center;
     padding-top:1%;
     padding-bottom: 1%;
+}
+/*                                       Termeni si conditii                                                  */
+
+.termeni-conditii h1{
+    text-align: center;
+    margin-bottom: 3%;
+}
+.termeni-conditii h3{
+    color:#0078AA;
+    margin-left:2%;
+    margin-bottom: 1%;
+    border-bottom: solid 1px;
+}
+.termeni-conditii p{
+    margin-left:3%;
+    padding-bottom: 1%;
+}
+.termeni-conditii ul{
+    margin-left:4%;
+    list-style: square;
 }
 
 @media screen and (max-width: 1024px)
@@ -469,9 +564,6 @@ table {
     .feedback .title{
         padding-left: 22%;
     }
-    .feedback .stars{
-        padding-left: 10%;
-    }
     .prev, .next {
         margin-top: 30%;
         padding:3%;
@@ -485,9 +577,6 @@ table {
         padding-right: 3%;
         padding-top: 3%;
     }
-    .questions-list{
-        margin-bottom:70px;
-      }
 }
 @media screen and (max-width: 500px) {
     .header-links ul li a{
@@ -503,6 +592,9 @@ table {
     .meniu-links ul li {
         padding: 8px 10px;
     }
+    .dropdown .fa{
+        font-size:10px;
+    }
     .footer{
         margin-top:4%;
     }
@@ -515,9 +607,6 @@ table {
         width: 100%;
     }
     .feedback .title{
-        padding-left: 10%;
-    }
-    .feedback .stars{
         padding-left: 10%;
     }
     .prev, .next {
@@ -533,10 +622,6 @@ table {
         padding-right: 3%;
         padding-top: 3%;
     }
-    .questions-list>div{
-        height: 60px;
-        font-size:15px;
-      }
 }
 @media screen and (max-width: 400px) {
     .text {
@@ -553,6 +638,9 @@ table {
     }
     .meniu-links ul li {
         padding: 8px 5px;
+    }
+    .dropdown .fa{
+        font-size:10px;
     }
     .row .fa-solid {
         font-size: 20px;
@@ -577,12 +665,10 @@ table {
     }
     .feedback .title{
         margin:auto;
-        padding-left:7%;
         
     }
-    .feedback .stars{
+    .feedback .star-rating{
         margin:auto;
-        padding-left: 38%;
     }
     .prev, .next {
         margin-top: 90%;
@@ -611,11 +697,4 @@ table {
         padding-right: 3%;
         padding-top: 3%;
     }
-    .questions-list{
-      grid-template-columns: repeat(1, 1fr); 
-      margin-bottom:500px;
-    }
-    .questions-list>div{
-        height: 60px;
-      }
 }
