--- a/proiect/login+register/LogIn_Reg.css
+++ b/proiect/login+register/LogIn_Reg.css
@@ -23,7 +23,7 @@ input[type=text], input[type=password] {
 }
 
 input[type=text]:focus, input[type=password]:focus {
-  background-color: #F6F6F6;
+  background-color: #ddd;
   outline: none;
 }
 
@@ -35,7 +35,7 @@ hr {
 
 /* Set a style for the submit/register button */
 .register_log_btn {
-  background-color: #76b6c4;
+  background-color: #695bd1;
   color: white;
   padding: 16px 20px;
   margin: 8px 0;
@@ -47,7 +47,6 @@ hr {
 
 .register_log_btn:hover {
   opacity:1;
-  background: #1da2d8;
 }
 
 /* Add a blue text color to links */
